<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tournament_matches_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs_genders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/primaryColor"
        app:tabMaxWidth="@dimen/tab_width"
        app:tabGravity="fill"
        android:contentDescription="@string/gender_tab"
        android:elevation="@dimen/action_bar_elevation"
        app:tabMode="fixed" />

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager_gender"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:contentDescription="@string/pager_male_female"
        android:adjustViewBounds="true"
        android:gravity="center"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:contentDescription="@string/progressbar"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone" />

</LinearLayout>